--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "manifest_version": 2,
-  "name": "DemoMonkey",
+  "name": "DemoRobot",
   "description": "Tamper your application's UI to demo almost anything",
-  "version": "7.1.0",
-  "author": "Severin Neumann <severin.neumann@altmuehlnet.de>",
-  "homepage_url": "https://github.com/Appdynamics/demomonkey/",
+  "version": "0.1.0",
+  "author": "Joe Groner <joe.groner@datarobot.com>",
+  "homepage_url": "https://github.com/joegroner/demorobot/",
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "icons": {
-    "16": "icons/monkey_16.png",
-    "48": "icons/monkey_48.png",
-    "128": "icons/monkey_128.png"
+    "16": "icons/datarobot_16.png",
+    "48": "icons/datarobot_48.png",
+    "128": "icons/datarobot_128.png"
   },
   "web_accessible_resources": [
     "manifest.json",
@@ -23,8 +23,8 @@
     "open_in_tab": true
   },
   "browser_action": {
-    "default_icon": "icons/monkey_16.png",
-    "default_title": "DemoMonkey",
+    "default_icon": "icons/datarobot_16.png",
+    "default_title": "DemoRobot",
     "default_popup": "popup.html"
   },
   "permissions": [
